@@ -15,10 +15,10 @@
  *
  */
 
-void perror (const char *s __UNUSED__)
-{
-   fprintf(stderr, "[Windows CE] error\n");
-}
+/* void perror (const char *s __UNUSED__) */
+/* { */
+/*    fprintf(stderr, "[Windows CE] error\n"); */
+/* } */
 
 /*
  * Stream related functions
